# dotfiles

./: .Xclients  .Xresources  .bashrc  .eslintrc  .gitconfig  .gitconfig##class.ws-rena  .gitconfig##default  .gitignore  .gitmodules  .hyper.js  .netrwhist  .pkglist  .profile  .tmux.conf  .vintrc.yml  .xbindkeysrc  .xinitrc  .xprofile  .zshenv  .zshrc  README  README.md  vimrcpototobackup
.config/: mimeapps.list  user-dirs.dirs  xplugrc
.config/alacritty/: alacritty.yml
.config/bash/: bashrc
.config/bat/: config
.config/clojure/: deps.edn
.config/dunst/: dunstrc
.config/home-manager/: .gitignore  .nixd.nix  .sops.yaml  README.md  base.nix  flake.nix  home-manager.nix  justfile  kanban.md
.config/i3/: config
.config/i3status/: config
.config/kanata/: kanata.kbd
.config/karabiner/: karabiner.json
.config/kitty/: kitty.conf  kitty.conf##class.mr-macbook  kitty.conf##default
.config/kmonad/: README.md  kmonad.kbd  kmonad.kbd##class.ws-delora  kmonad.kbd##class.ws-rena  kmonad.service
.config/mako/: config
.config/nitrogen/: bg-saved.cfg##class.ws-delora  bg-saved.cfg##class.ws-rena  nitrogen.cfg
.config/nix/: .gitignore  nix.conf  nix.conf##class.ws-delora  nix.conf##default
.config/nixpkgs/: base.nix  flake.nix  home-manager.nix  home.nix  kanban.md  overlays.nix
.config/nvim/: .gitignore  .projections.json  Makefile  coc-settings.json  init.lua  init.vim  kanban.md  lazy-lock.json  test-runner.sh
.config/picom/: picom.conf
.config/pipewire/: pipewire-pulse.conf
.config/polybar/: config  launch.sh  pcrypto.py  polystock.py  timew-duration.sh
.config/rofi/: card_circle.rasi  colors.rasi  config.rasi  power-menu.rasi
.config/screenlayout/: default.sh##class.ws-delora  default.sh##class.ws-macbook  default.sh##class.ws-rena
.config/shell/: .gitignore  ansible.sh  common_aliases.sh  common_helpers.sh  common_paths.sh  comp.zsh  dir_colors.sh  docker.sh  git.sh  index.sh  mr_func.sh  nix.sh  npm-helpers.sh  npm.sh  nvm.sh  osx.sh  pacman.sh  profile  systemd.sh  task.sh  x11.sh
.config/surfingkeys/: config.js
.config/swaync/: style.css
.config/taffybar/: .gitignore  compile  flake.nix  package.yaml  stack.yaml  taffybar.css
.config/task/: .gitignore  colors.theme  taskclientrc##class.ws-delora  taskclientrc##default  taskrc
.config/tmux/: tmux.conf  (+1 more)
.config/xmonad/: .gitignore  build  compile  compile-xmobar  flake.nix  hie.yaml  install.sh  kanban.md  package.yaml  stack.yaml  xmonad-berks.cabal
.config/xmonad/scripts/: update-deps.sh
.config/xmonad/src/: Main.hs
.config/xmonad/src/Berks/: CheatSheet.hs  Colors.hs  Font.hs  GridSelect.hs  HideLazyPointer.hs  KeyMaps.hs  MultiToggleState.hs  Scratchpads.hs  Taffybar.hs  Trayer.hs  Urgency.hs  Utils.hs
.config/xmonad/src/Berks/Layouts/: Accordion.hs  Horiz.hs  Magnify.hs  Main.hs  Monocle.hs  TabTheme.hs  ThreeCol.hs  Vert.hs
.xmonad/: .gitignore  build  compile  kanban.md  stack.yaml  xmonad-berks.cabal  xmonad.hs
.xmonad/Berks/: Font.hs
.xmonad/Berks/XMobar/: Conf.hs
.xmonad/src/: Main.hs
.xmonad/src/Berks/: Colors.hs  GridSelect.hs
.xmonad/src/Berks/Layouts/: Horiz.hs  Magnify.hs  Main.hs  Monocle.hs  Vert.hs
dotfiles/: Xresource.xrdb  bash_aliases  czrc.json  eslintrc  hyper.js  init.vim  jscsrc  jshintrc  karabiner.json  profback  profile  profile.sh  rofi.xrdb  tmux.conf  vimrc  zsh.zshrc
lets_split/: config.h  keymap.c  rules.mk
planck/: config.h  keymap.c  rules.mk
plugin/: rosvim.vim
spell/: en.utf-8.add  en.utf-8.add.spl
tags/: cpp  gl  sdl
tmux/: tmuxSnapshot.conf
(+695 files in other folders)
