cabal-version:      2.4
name:               xmonad-berks
version:            0.1.0.0

author:             Berkeley True
maintainer:         berkeleytrue@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Berks.Colors
    Berks.Font
    Berks.GridSelect
    Berks.Trayer
    Berks.XMobar.Conf
  hs-source-dirs:
    src
  build-depends:
      directory
    , unix
    , filepath
    , containers
    , xmonad
    , xmonad-contrib
    , base ^>=4.14.1.0
  default-language:
    Haskell2010

executable xmonad
  main-is:
    ./xmonad.hs
  build-depends:
      containers
    , xmonad
    , xmonad-contrib
    , base ^>=4.14.1.0
    , xmonad-berks
  default-language:
    Haskell2010
