cabal-version:      2.4
name:               xmonad-berks
version:            0.1.0.0

author:             Berkeley True
maintainer:         berkeleytrue@users.noreply.github.com

executable xmonad
  hs-source-dirs: ./src
  main-is:
    Main.hs
  other-modules:
      Berks.Font
    , Berks.GridSelect
    , Berks.Trayer
    , Berks.Colors
    , Berks.Layouts.TabTheme
    , Berks.Layouts.Magnify
  build-depends:
      containers
    , directory
    , unix
    , filepath
    , xmonad
    , xmonad-contrib
    , base ^>=4.14.1.0
  default-language:
    Haskell2010
