cabal-version:      2.4
name:               xmonad-berks
version:            0.1.0.0

author:             Berkeley True
maintainer:         berkeleytrue@users.noreply.github.com

executable xmonad
  hs-source-dirs: ./src
  main-is:
    Main.hs
  other-modules:
      Berks.CheatSheet
    , Berks.Colors
    , Berks.Font
    , Berks.GridSelect
    , Berks.KeyMaps
    , Berks.Layouts.Horiz
    , Berks.Layouts.Main
    , Berks.Layouts.Monocle
    , Berks.Layouts.TabTheme
    , Berks.Layouts.Vert
    , Berks.Scratchpads
    , Berks.Trayer
    , Berks.Urgency
  build-depends:
      base ^>=4.14.1.0
    , containers
    , directory
    , filepath
    , unix
    , xmonad
    , xmonad-contrib
  default-language:
    Haskell2010
